# aincorrector

./: .gitignore  PRD.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/models/: __init__.py  authentic.py  client.py  continuation.py  mutator.py
app/pipeline/: orchestrator.py
app/styles/: __init__.py  prompts.py
app/utils/: domain_guard.py  logging.py  replay.py  timing.py  tokens.py
tests/: test_cleaning.py  test_cli_config.py  test_config.py  test_domain_guard.py  test_prompts.py  test_replay.py  test_tokens.py
