[project]
name = "aincorrector"
version = "0.1.0"
description = "Experimental LLM trajectory-poisoning CLI prototype."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
